Add LastCrawledAt, LastContent, IsPaused
